# cpp

./: .gitignore
allocation/: CMakeLists.txt  main.cpp
arrow/: CMakeLists.txt  main.cpp
auto/: CMakeLists.txt  main.cpp
bad_practice/: CMakeLists.txt  main.cpp
basic_type_tpl/: CMakeLists.txt  main.cpp
basics/: CMakeLists.txt  main.cpp
binary_arithmetic/: CMakeLists.txt  main.cpp
binary_trees/: CMakeLists.txt  main.cpp
btree_cpp/: CMakeLists.txt  binarytrees.cpp
btree_no_pool/: CMakeLists.txt  main.cpp
casting/: CMakeLists.txt  main.cpp
chrono/: CMakeLists.txt  main.cpp
classes/: CMakeLists.txt  main.cpp
concepts/: CMakeLists.txt  main.cpp
const/: CMakeLists.txt  main.cpp
control_flow/: CMakeLists.txt  main.cpp
copy_constructor/: CMakeLists.txt  main.cpp
dyn_array/: CMakeLists.txt  main.cpp
env/: CMakeLists.txt  main.cpp
exceptions/: CMakeLists.txt  main.cpp
fold_expressions/: CMakeLists.txt  main.cpp
friend-class/: CMakeLists.txt  main.cpp
function_pointers/: CMakeLists.txt  main.cpp
hash_table/: CMakeLists.txt  hashmap.c  main.c
hash_table/include/: hashmap.h
http-request/: CMakeLists.txt  CMakeSettings.json  http-request.cpp
include/: CMakeLists.txt  main.cpp
initializers/: CMakeLists.txt  main.cpp
iterators/: main.cpp
json/: CMakeLists.txt  hey.json  main.cpp
l-r-values/: CMakeLists.txt  main.cpp
lambdas/: CMakeLists.txt  main.cpp
lambdas_adv/: CMakeLists.txt  main.cpp
list-vs-array/: CMakeLists.txt  list-vs-array.cpp
longest-valid-parentheses/: CMakeLists.txt  CMakeLists.txt.user.fd4a31b  main.cpp
macros/: CMakeLists.txt  main.cpp
mandel/: CMakeLists.txt  main.cpp
maps/: CMakeLists.txt  main.cpp
maze-backtracking/: CMakeLists.txt  maze-backtracking.cpp
memory_safety/: CMakeLists.txt  main.cpp
modules/: main.ixx  modules.sln  modules.vcxproj  modules.vcxproj.filters
move_semantics/: CMakeLists.txt  main.cpp
newton-method/: CMakeLists.txt  newton-method.cpp
omp/: CMakeLists.txt  main.cpp
optional/: CMakeLists.txt  CMakeSettings.json  optional.cpp
pointers/: CMakeLists.txt  main.cpp
random/: CMakeLists.txt  main.cpp
raytracer/: CMakeLists.txt  main.cpp  ray.h  vec3.h
references/: CMakeLists.txt  main.cpp
sdl/: CMakeLists.txt  main.cpp
simdjson/: CMakeLists.txt  main.cpp
singleton/: CMakeLists.txt  main.cpp
stack_heap/: CMakeLists.txt  main.cpp
static/: CMakeLists.txt  main.cpp
strings/: CMakeLists.txt  strings.cpp
templates/: CMakeLists.txt  main.cpp
thread_pool/: CMakeLists.txt  ThreadPool.h  main.cpp
threads/: CMakeLists.txt  main.cpp
timing/: CMakeLists.txt  main.cpp
tuple/: CMakeLists.txt  main.cpp
type_punning/: CMakeLists.txt  main.cpp
type_sizes/: CMakeLists.txt  main.cpp
type_traits/: CMakeLists.txt  main.cpp
unions/: CMakeLists.txt  main.cpp
vectors/: CMakeLists.txt  main.cpp
vectors_no_copy/: CMakeLists.txt  main.cpp
vk/: CMakeLists.txt  compile-shaders.sh  main.cpp  triangle.cpp  triangle.h
vk/shaders/: triangle.frag  triangle.vert
vulkan/: CMakeLists.txt  main.cpp
vulkan-imgui/: CMakeLists.txt  main.cpp
win-threads/: CMakeLists.txt  create-process.h  create-thread.h  numa.h  std-thread.h  suspend-thread.h  sync-threads.h  sys-info.h  thread-local.h  win-threads.cpp
