# CMakeList.txt : CMake project for list-vs-array, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (list-vs-array "list-vs-array.cpp")

# TODO: Add tests and install targets if needed.
